fixed time-date input positioning on mobile

--- a/style/index.scss
+++ b/style/index.scss
@@ -216,7 +216,7 @@
                 width: 100%;
                 input:nth-child(1) {
                     width: 60%;
-                    margin-right: 8%;
+                    margin-right: 5%;
                 }
                 input:nth-child(2) {
                     width: 30%;
